  . session_register(), session_unregister() and session_is_registered()
    (needed only with "register_globals=On").
  . "magic_quotes_gpc", "magic_quotes_runtime" and "magic_quotes_sybase" ini
    options. (Pierre)
  . Changed get_magic_quotes_gpc(), get_magic_quotes_runtime to always return
    false and set_magic_quotes_runtime() to raise an E_CORE_ERROR.
- Removed support for "continue" and "break" operators with non-constant
  operands. (Dmitry)
- Removed Freetype 1.x and GD 1.x from GD extension. (Pierre)

- Moved extensions to PECL:
  . ext/ncurses (Hartmut)

- Improved and cleaned CGI code. FastCGI is now always enabled and can not be
  disabled. See sapi/cgi/CHANGES for more details. (Dmitry)
- Improved ext/zlib; re-implemented non-file related functionality. (Mike)
- Improved output layer; see README.NEW-OUTPUT-API for internals. (Mike)
- Improved ext/mhash: (Mike)
  . Added keygen constants.
  . Added new functions: mhash_keygen_count, mhash_get_keygen_name,
    mhash_keygen_uses_hash, mhash_keygen_uses_salt, mhash_get_keygen_salt_size,
    mhash_keygen.


- Added "jump label" operator (limited "goto"). (Dmitry, Sara)
- Added E_STRICT to E_ALL. (Dmitry)
- Added an optional parameter to strstr() and stristr() for retrieval of either
  the part of haystack before or after first occurence of needle. (Johannes)
- Added possibility to check in which extension an internal function was
  defined using reflection API. (Johannes)
- Added streams features:
  . Context parameter for copy() function. (Sara)
  . Second optional parameter to stream_context_create() to
    set params during context creation. (Sara)
  . "context" and "binary_pipes" params in "other_options" arg. (Sara)
  . stream_resolve_include_path(). (Sara)
- Added shm_has_var() function. (Mike)
- Added str_getcsv() function. (Sara)

- Fixed bug #39504 (xmlwriter_write_dtd_entity() creates Attlist tag, 
  not enity). (Hannes Magnusson)