@@ -54,6 +54,7 @@ PHP                                                                        NEWS
   . stream_resolve_include_path(). (Sara)
 - Added shm_has_var() function. (Mike)
 - Added str_getcsv() function. (Sara)
+- Added ext/hash support to ext/session's ID generator. (Sara)
 
 - Fixed bug #39504 (xmlwriter_write_dtd_entity() creates Attlist tag, 
   not enity). (Hannes Magnusson)
